@@ -1,7 +1,7 @@
 Package: flextable
 Type: Package
 Title: Functions for Tabular Reporting
-Version: 0.5.3.007
+Version: 0.5.3.008
 Authors@R: c(
     person("David", "Gohel", role = c("aut", "cre"),
     email = "david.gohel@ardata.fr"),
@@ -18,14 +18,14 @@ Description: Create pretty tables for 'HTML', 'Microsoft Word' and 'Microsoft Po
 License: GPL-3
 LazyData: TRUE
 Imports:
-    stats, utils, grDevices,
+    stats, utils, grDevices, graphics,
     officer (>= 0.2.0),
     rmarkdown, knitr, htmltools,
     xml2, data.table,
     gdtools (>= 0.1.6), rlang, 
     base64enc
 RoxygenNote: 6.1.1
-Suggests: testthat, xtable, magrittr, webshot, graphics, magick, ggplot2
+Suggests: testthat, xtable, magrittr, webshot, magick, ggplot2
 Encoding: UTF-8
 URL: https://davidgohel.github.io/flextable
 BugReports: https://github.com/davidgohel/flextable/issues
