@@ -52,6 +52,7 @@ export(flextable_dim)
 export(font)
 export(fontsize)
 export(footers_flextable_at_bkm)
+export(footnote)
 export(headers_flextable_at_bkm)
 export(height)
 export(height_all)
@@ -108,6 +109,8 @@ importFrom(gdtools,raster_write)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,rgb)
+importFrom(graphics,par)
+importFrom(graphics,plot)
 importFrom(htmltools,HTML)
 importFrom(htmltools,browsable)
 importFrom(htmltools,div)
@@ -139,6 +142,7 @@ importFrom(stats,reshape)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(stats,terms)
+importFrom(stats,update)
 importFrom(utils,browseURL)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
